Sat Feb 28 14:50:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (BasicSocket#connect_address): returns ::1
	  if the address is IPv4-mapped IPv6 address for 0.0.0.0 for MacOS X.

Sat Feb 28 00:18:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: suppress strict-aliasing warning with
	  gcc version 4.4.0 20090219 (Red Hat 4.4.0-0.21) on Fedora 11 Alpha.

	* ext/socket/socket.c: ditto.

	* ext/socket/unixsocket.c: ditto.

	* ext/socket/sockport.h (SS_LEN): defined.
	  (SET_SS_LEN): ditto.

Fri Feb 27 22:30:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): close FDs passed by
	  SCM_RIGHTS unless :scm_rights=>true is given.
	  (discard_cmsg): extracted from rsock_discard_cmsg_resource.

Fri Feb 27 22:14:22 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/buffering.rb: define Buffering module under
	  OpenSSL.  [ruby-dev:37906]

Fri Feb 27 22:09:24 2009  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit/assertions.rb: don't define assert_not_* if already
	  overridden.

Fri Feb 27 22:02:34 2009  Tanaka Akira  <akr@fsij.org>

	* util.c: fix SEGV by test_time.rb with
	  gcc version 4.4.0 20090219 (Red Hat 4.4.0-0.21) on Fedora 11 Alpha.

Fri Feb 27 18:30:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (cdhash_type, iseq_set_sequence): should not call
	  methods of the argument of case, to keep the semantics of
	  case/when.  [ruby-dev:38079]

Fri Feb 27 18:01:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (ruby_get_stack_grow_direction): no needs to use thread
	  here, and not initialized yet.  [ruby-core:22439]

Fri Feb 27 17:45:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_load_ok): checks if regular file, except for the
	  platform disallows to open directories, e.g. dosish.
	  [ruby-dev:38097], [Bug #1221]

Fri Feb 27 14:39:40 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (flo_eq, flo_gt, flo_ge, flo_lt, flo_le, flo_eql): revert